--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -2,6 +2,14 @@
   min-height: 100vh;
   height: 100vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 8rem 15rem;
 }
 
 .usernameWrapper {
