--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,38 +1,35 @@
 .container {
-  min-height: 100vh;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    min-height: 100vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .formContainer {
-  display: flex;
-  flex-direction: column;
-  padding: 8rem 15rem;
+    display: flex;
+    flex-direction: column;
+    padding: 5rem 1.8rem;
 }
 
-.usernameWrapper {
-  width: 100%;
-  display: flex;
-  min-height: 100vh;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
+/* tablet */
+@media (min-width: 480px) {
+    .formContainer {
+        padding: 8rem 15rem;
+    }
 }
 
-.usernameInner {
-  display: flex;
-  background-color: rgba(256, 256, 256, 0.8);
-  padding: 5rem;
-  border-radius: 8px;
+/* laptop */
+@media (min-width: 768px) {
+    .formContainer {
+        padding: 12rem 10rem;
+    }
 }
 
-.usernameInner input,
-.usernameInner button {
-  font-size: 1.25rem;
+/* desktop */
+@media (min-width: 1200px) {
+    .formContainer {
+        padding: 8rem 15rem;
+    }
 }
 
-.usernameInner button {
-  margin-left: 1rem;
-}
