--- a/client/components/RoomsList.module.css
+++ b/client/components/RoomsList.module.css
@@ -1,12 +1,14 @@
 .container {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    padding: 0 2rem;
 }
 
 .roomsContainer {
     display: flex;
     overflow-x: auto;
     align-items: center;
+    padding: 0.5rem 0;
 }
 
 .roomsContainer a:first-child {
@@ -14,18 +16,29 @@
 }
 
 .roomButton {
-    width: 8rem;
     margin-left: 0.5rem;
+}
+
+.title {
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 @media (min-width: 480px) {
     .container {
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 0;
     }
 
     .roomsContainer {
         flex-direction: column;
+        padding: 0;
+    }
+
+    .roomButton {
+        margin-left: 0;
     }
 }
