no changes description

--- a/client/components/RoomsList/RoomsList.module.css
+++ b/client/components/RoomsList/RoomsList.module.css
@@ -40,5 +40,11 @@
 
     .roomButton {
         margin-left: 0;
+        margin-bottom: 0.7rem;
+    }
+
+    .title {
+        margin: 0;
+        margin-bottom: 0.5rem;
     }
 }
