--- a/client/components/MainNavbar/MainNavbar.module.css
+++ b/client/components/MainNavbar/MainNavbar.module.css
@@ -1,10 +1,14 @@
+.container {
+    width: auto;
+}
+
 .hr {
     margin: 1rem 2rem;
 }
 
 .formRoomContainer {
     display: flex;
-    padding: 0.5rem;
+    justify-content: space-around;
 }
 
 .expandButton {
