--- a/client/components/RoomsLayout/RoomsLayout.module.css
+++ b/client/components/RoomsLayout/RoomsLayout.module.css
@@ -4,8 +4,18 @@
     height: 100vh;
 }
 
+.subcontainer {
+    margin: 0.5rem;
+    height: 100vh;
+}
+
 @media (min-width: 480px) {
     .container {
         flex-direction: row;
+    }
+
+    .subcontainer {
+        height: auto;
+        width: 100vw;
     }
 }
