--- a/client/components/Message/Message.module.css
+++ b/client/components/Message/Message.module.css
@@ -1,8 +1,13 @@
 .container {
     display: flex;
     flex-direction: column;
-    background-color: grey;
     margin-top: 1rem;
+}
+
+.messageContainer {
+    display: flex;
+    flex-direction: column;
+    background-color: grey;
     padding: 0.5rem 1rem;
     width: fit-content;
     max-width: calc(100% - 4rem);
@@ -10,7 +15,10 @@
 }
 
 .own {
-    align-self: flex-end;
+    align-items: flex-end;
+}
+
+.ownBorder {
     border-radius: 1.5rem 0 0 1.5rem;
 }
 
