--- a/client/components/RoomInfo/RoomInfo.module.css
+++ b/client/components/RoomInfo/RoomInfo.module.css
@@ -15,3 +15,23 @@
 .description {
     font-size: 0.9rem;
 }
+
+.info {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 1024px) {
+    .leaveButton {
+        display: none;
+    }
+
+    .info {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .title {
+        margin-right: 0.5rem;
+    }
+}
