--- a/client/components/UserBadge/UserBadge.module.css
+++ b/client/components/UserBadge/UserBadge.module.css
@@ -7,3 +7,16 @@
     padding: 0.2rem;
     margin-right: 1rem;
 }
+
+@media (min-width: 1024px) {
+    .container {
+        border: none;
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .container:hover {
+        background-color: white;
+    }
+}
