--- a/client/components/UsersRoom/UsersRoom.module.css
+++ b/client/components/UsersRoom/UsersRoom.module.css
@@ -12,3 +12,19 @@
     overflow-x: auto;
     padding: 0.7rem 0;
 }
+
+@media (min-width: 1024px) {
+    .expandButton {
+        display: none;
+    }
+
+    .badgesContainer {
+        flex-direction: column;
+        overflow-x: none;
+        align-items: center;
+    }
+
+    .container {
+        flex-grow: 1;
+    }
+}
