--- a/client/pages/rooms/[id].module.css
+++ b/client/pages/rooms/[id].module.css
@@ -6,5 +6,27 @@
 .container {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
 }
+
+.desktopUsers {
+    display: none;
+}
+
+@media (min-width: 1024px) {
+    .desktopUsers {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mobileUsers {
+        display: none;
+    }
+
+    .container {
+        flex-direction: row;
+    }
+    
+    .subcontainer {
+        flex-grow: 1;
+    }
+ }
