--- a/client/components/RoomsLayout/RoomsLayout.module.css
+++ b/client/components/RoomsLayout/RoomsLayout.module.css
@@ -4,12 +4,18 @@
     height: 100vh;
 }
 
-.subcontainer {
-    margin: 0.5rem;
-    height: 100%;
+.content {
+    display: flex;
+    flex-grow: 1;
+    height: 0;
 }
 
-@media (min-width: 480px) {
+.contentContainer {
+    margin: 0.5rem;
+    flex-grow: 1;
+}
+
+@media (min-width: 768px) {
     .container {
         flex-direction: row;
     }
